--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>line example</title>
+    <meta charset="utf-8">
+    <title>图表</title>
   </head>
   <body>
     <div id="line-user"></div>
+    <div id="bar-user"></div>
+    <div id="pie-user" ></div>
     <script src="/dist/line.js"></script>
+    <script src="/dist/bar.js"></script>
+    <script src="/dist/pie.js"></script>
   </body>
 </html>
